Practicando para o examen
ASDF

--- a/AJAX/Examen19/crear.html
+++ b/AJAX/Examen19/crear.html
@@ -28,7 +28,7 @@
             <div class="caja"><input type="text" id="titulo"></div>
             <div class="error" id="etitulo">Vacía</div>
             <div class="titulo">Imagen</div>
-            <div class="caja"><input type="url" value="img/" id="imagen"></div>
+            <div class="caja"><input type="text" value="img/" id="imagen"></div>
             <div class="error" id="eimagen">Vacía</div>
             <div><button class="btn btn-success btn-large">Crear</button></div>
             <div style="clear:both"></div>
