Añadiendo drag and drop

--- a/AJAX/Examen19/jugar.html
+++ b/AJAX/Examen19/jugar.html
@@ -14,5 +14,17 @@
         <div id="contenedorFotos">
             <div style="clear:both"></div>
         </div>
+        <div id="check">
+            <div class="contenedor">Casa Targaryen</div>
+            <div class="contenedor">Casa Lannister</div>
+            <div class="contenedor">Casa Baratheon</div>
+            <div class="contenedor">Casa Greyjoy</div>
+            <div class="contenedor">Casa Bolton</div>
+            <div class="contenedor">Casa Start</div>
+            <div class="contenedor">Casa Tyrell</div>
+            <div class="contenedor">Casa Clegane</div>
+
+
+        </div>
     </body>
 </html>
