--- a/AJAX/Examen19/jugar.html
+++ b/AJAX/Examen19/jugar.html
@@ -15,14 +15,14 @@
             <div style="clear:both"></div>
         </div>
         <div id="check">
-            <div class="contenedor">Casa Targaryen</div>
-            <div class="contenedor">Casa Lannister</div>
-            <div class="contenedor">Casa Baratheon</div>
-            <div class="contenedor">Casa Greyjoy</div>
-            <div class="contenedor">Casa Bolton</div>
-            <div class="contenedor">Casa Start</div>
-            <div class="contenedor">Casa Tyrell</div>
-            <div class="contenedor">Casa Clegane</div>
+            <div class="contenedor" id="Casa Targaryen">Casa Targaryen</div>
+            <div class="contenedor" id="Casa Lannister">Casa Lannister</div>
+            <div class="contenedor" id="Casa Baratheon">Casa Baratheon</div>
+            <div class="contenedor" id="Casa Greyjoy">Casa Greyjoy</div>
+            <div class="contenedor" id="Casa Bolton">Casa Bolton</div>
+            <div class="contenedor" id="Casa Stark">Casa Stark</div>
+            <div class="contenedor" id="Casa Tyrell">Casa Tyrell</div>
+            <div class="contenedor" id="Casa Clegane">Casa Clegane</div>
 
 
         </div>
